force-app/main/default/objects/Reload_Field_Value__c/Reload_Field_Value__c.object-meta.xml
<CustomObject>
    <description>Stores field-level values for staged records to allow flexible editing without manipulating the raw payload.</description>
    <label>Reload Field Value</label>
    <pluralLabel>Reload Field Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>RF-{000000}</displayFormat>
        <label>Field Value Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>