force-app/main/default/objects/Reload_Field_Value__c/fields/Field_Label__c.field-meta.xml
<CustomField>
    <fullName>Field_Label__c</fullName>
    <description>Friendly label for the field being mapped.</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>