force-app/main/default/objects/Reload_Field_Value__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <description
  >Type of the target field for validation and rendering.</description>
    <label>Field Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Reference</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>