force-app/main/default/objects/Reload_Field_Value__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>Value that will be written to the target field.</description>
    <label>Field Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>