force-app/main/default/objects/Reload_Field_Value__c/fields/Is_Key__c.field-meta.xml
<CustomField>
    <fullName>Is_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this field participates in record matching logic.</description>
    <label>Is Key</label>
    <type>Checkbox</type>
</CustomField>