force-app/main/default/objects/Reload_Field_Value__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description
  >Display order for the field when rendering in user interfaces.</description>
    <label>Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>