force-app/main/default/objects/Reload_Field_Value__c/fields/Staging_Record__c.field-meta.xml
<CustomField>
    <fullName>Staging_Record__c</fullName>
    <description>Staging record that this field value belongs to.</description>
    <label>Staging Record</label>
    <referenceTo>Reload_Staging__c</referenceTo>
    <relationshipLabel>Field Values</relationshipLabel>
    <relationshipName>Field_Values</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>