force-app/main/default/objects/Reload_Field_Value__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Staging_Record__c</columns>
    <columns>Field_Label__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Is_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Field Values</label>
</ListView>